--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,14 +5,14 @@ server.servlet.context-path=/api
 # Database Configuration
 spring.datasource.url=jdbc:h2:mem:taskdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
